<resources>
    <string name="app_name">Adoptzilla</string>
    <string name="app_id">AdoptzillaApp</string>
    <string name="login">Log in</string>
    <string name="logout">Log out</string>
    <string name="adopt">Adopt</string>
    <string name="zilla">zilla</string>
    <string name="register">Register</string>
    <string name="fullname">full name</string>
    <string name="phone">phone</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="backButton">❮</string>
    <string name="new_ad">new ad</string>
    <string name="petName">pet name</string>
    <string name="petType">pet type</string>
    <string name="petAge">pet age</string>
    <string name="petDescription">pet description</string>
    <string name="addImage">+ image</string>
    <string name="add">add</string>
    <string name="more">→</string>
    <string name="addingImage">adding image</string>
    <string name="PetType">pet type</string>
    <string name="SeeAds">See Ads</string>
    <string-array name="sort_age">
        <item>sort by age:</item>
        <item>on</item>
        <item>off</item>
    </string-array>
    <string-array name="pet_types">
    <item>pet type:</item>
    <item>Cat</item>
    <item>Dog</item>
    <item>Pig</item>
    <item>Bird</item>
    <item>Goat</item>
    </string-array>
    <string name="Age">Age: </string>
</resources>