<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/newAdBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/darkpurple">


    <Button
        android:id="@+id/newAdBackButton"
        android:layout_width="59dp"
        android:layout_height="48dp"
        android:background="@color/Transparent"
        android:text="@string/backButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.021" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="299dp"
        android:layout_height="80dp"
        android:layout_marginStart="56dp"

        android:layout_marginTop="75dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="576dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"

        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo2"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/newAdPetName"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/petName"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.254"
        tools:ignore="TextContrastCheck" />

    <Button
        android:id="@+id/addImage"
        android:layout_width="137dp"
        android:layout_height="43dp"
        android:backgroundTint="@color/darkorange"
        android:text="@string/addImage"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.295"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.806"
        tools:ignore="TextContrastCheck" />

    <EditText
        android:id="@+id/newAdPetDescription"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/petDescription"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.66" />

    <EditText
        android:id="@+id/newAdPetAge"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/petAge"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:minHeight="48dp"
        android:textColorHint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.515"
        tools:ignore="TextContrastCheck" />

    <Spinner
        android:id="@+id/petTypeChoiceBox"
        android:layout_width="250dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/white"
        android:gravity="center|fill"
        android:hint="@string/petName"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.374" />

    <Button
        android:id="@+id/done"
        android:layout_width="143dp"
        android:layout_height="52dp"
        android:backgroundTint="@color/black"
        android:text="@string/add"
        android:textColor="@color/white"
        android:textSize="17sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.951"
        tools:ignore="TextContrastCheck" />

    <ImageView
        android:id="@+id/petImg"
        android:layout_width="84dp"
        android:layout_height="91dp"
        android:contentDescription="@string/addingImage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.755"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.822" />


</androidx.constraintlayout.widget.ConstraintLayout>